# schemaic

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  deny.toml
.claude/agents/: locate.md  scout.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/schemaic-ai/: Cargo.toml
crates/schemaic-ai/src/: lib.rs
crates/schemaic-app/: Cargo.toml  build.rs
crates/schemaic-app/src/: ai.rs  claude_cli.rs  main.rs  mcp.rs
crates/schemaic-core/: Cargo.toml
crates/schemaic-core/src/: connection.rs  db_color.rs  diff.rs  edit.rs  export.rs  format.rs  history.rs  lib.rs  model.rs  palette.rs  persist.rs  plan.rs  resource.rs  schema.rs  sql.rs  sqlfmt.rs  text.rs  text_ops.rs  transcript.rs
crates/schemaic-db/: Cargo.toml
crates/schemaic-db/src/: lib.rs  ssh.rs
crates/schemaic-term/: Cargo.toml
crates/schemaic-term/src/: lib.rs  shell.rs
crates/schemaic-ui/: Cargo.toml
crates/schemaic-ui/src/: ai_panel.rs  completion.rs  connection_form.rs  consts.rs  diff_view.rs  editor_pane.rs  fonts.rs  grid.rs  history_panel.rs  icons.rs  lib.rs  markdown.rs  overlays.rs  plan_view.rs  schema_tree.rs  settings.rs  sql_highlight.rs  tabs.rs  theme.rs  themes.rs  widgets.rs
